temp/spring_analysis_retry.log
로깅 설정 파일 로드 실패: cannot import name 'PathUtils' from 'util' (consider renaming 'D:\\Analyzer\\CreateMetaDb\\util\\__init__.py' if it has the same name as a library you intended to import)
Traceback (most recent call last):
  File "D:\Analyzer\CreateMetaDb\main.py", line 9, in <module>
    from util import (
    ...<3 lines>...
    )
  File "D:\Analyzer\CreateMetaDb\util\__init__.py", line 7, in <module>
    from .database_utils import DatabaseUtils, create_database_connection, execute_sql_script
  File "D:\Analyzer\CreateMetaDb\util\database_utils.py", line 370
    else:
    ^^^^
SyntaxError: invalid syntax
